2014-03-05 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #25. Process ensembles in 1 file mdl.nc with common variable at root in file 2 obs.nc

	* nco_prc_nsm(). Process ensembles in 1 file with common variable at root in file 2

2014-03-04 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #24. Process variables belonging to ensembles in both files

	* nco_prc_cmn_nsm(). Process variables belonging to ensembles in both files

2014-03-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.3 release procedure:
 	Changes since nco-4_4_2: srd DAP, fxm
	cd ~/nco;cvs tag -d nco-4_4_3;cvs tag -d nco-4_4_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.3 release"
	cvs tag -c nco-4_4_3;cvs tag -c nco-4_4_3-1

	* User reported extreme slowdown accessing 3-D data with strides from DAP server
	Info from R. Signell and J. Whitaker suggests using nco_get_vars() instead of nco_get_varm()
	All NCO hyperslab code uses nco_get_varm() instead of nco_get_vars(), and supplies NULL * as mapping vector
	Replacing all instances of nco_get_varm() with nco_get_vars() solves access speed problem on DAP

2014-03-03  Charlie Zender  <zender@uci.edu>

	* Add NCOpy by Joe Hamman to homepage

2014-02-27  Charlie Zender  <zender@uci.edu>

	* Document HDF Group H4CF tool h4tonccf

2014-02-26  Charlie Zender  <zender@uci.edu>

	* Warn about record chunk sizes only after records have been written

2014-02-25  Charlie Zender  <zender@uci.edu>

	* Diagnose/fix ncwa/ncpdq dimension-matching algorithm
	Old algorithm matched any dimension that contained specified string

2014-02-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: ncra.c mmr 4 LLVM/clang, -X, rx nsx, cll_mth, ncwa sng, cnk
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Slightly simplify logic in calling/utilizing nco_inq_format_extended()
